# RustBot

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.example.toml  setup.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-16-ai-agent-framework.md  2026-02-17-scheduling-tool-design.md  2026-02-18-update-agent-skills-format.md  2026-02-19-readme-update-models-and-features-plan.md  2026-02-19-readme-update-models-and-features.md  2026-02-20-setup-load-existing-config-design.md  2026-02-20-setup-load-existing-config.md  2026-02-20-setup-wizard-web-ui.md  2026-02-21-multi-provider-llm-design.md  2026-02-21-multi-provider-llm-plan.md  2026-02-21-skill-writer-design.md  2026-02-21-skill-writer.md  2026-02-21-threads-mcp-integration-design.md  2026-02-21-threads-mcp-integration.md  2026-02-22-tool-activity-hints-design.md  2026-02-22-tool-activity-hints.md
setup/: index.html
skills/: memory-manager.md
skills/coding-assistant/: SKILL.md
skills/creating-skills/: SKILL.md
src/: agent.rs  bot.rs  config.rs  llm.rs  main.rs  mcp.rs  tools.rs
src/memory/: conversations.rs  embeddings.rs  knowledge.rs  mod.rs
src/platform/: mod.rs  telegram.rs
src/scheduler/: mod.rs  reminders.rs  tasks.rs
src/skills/: loader.rs  mod.rs
