[package]
name = "rustbot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Telegram bot framework
teloxide = { version = "0.17", features = ["macros"] }

# HTTP client for OpenRouter
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
toml = "0.8"

# MCP client
rmcp = { version = "0.15", features = ["client", "transport-child-process", "transport-io"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Async utilities
futures = "0.3"
